--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,8 @@ node_modules
 # Ignore .env configuration files
 .env
 
+# Ignore public files
+public/files
+
 # Ignore .DS_Store files on OS X
 .DS_Store
